--- a/desafios/lista-de-tarefas/style.css
+++ b/desafios/lista-de-tarefas/style.css
@@ -41,15 +41,23 @@ input[type=text] {
 #adicionar {
     background-color: #181818;
     width: 100%;
+    height: 50px;
     max-width: 40px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.icone img {
+    width: 50%;
+}
 
 #adicionar:hover {
     cursor: pointer;
+}
+
+#templateTarefas{
+    display: none;
 }
 
 .tarefa{
