--- a/desafios/lista-de-tarefas/style.css
+++ b/desafios/lista-de-tarefas/style.css
@@ -7,7 +7,7 @@
 body, html {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #181818;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 110%;
 }
 
@@ -25,6 +25,15 @@ h1 {
     text-align: center;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:visited{
+    color: white;
+}
+
 .linha-adicionar {
     display: flex;
     gap: 20px
@@ -32,10 +41,15 @@ h1 {
 
 input[type=text] {
     background-color: #181818;
+    color: white;
     border: none;
     padding: 15px;
     border-radius: 10px;
     flex-grow: 1;
+}
+
+input::placeholder {
+    color: rgb(139, 139, 139);
 }
 
 #adicionar {
