--- a/desafios/lista-de-tarefas/style.css
+++ b/desafios/lista-de-tarefas/style.css
@@ -41,7 +41,7 @@ a:visited{
 
 input[type=text] {
     background-color: #181818;
-    color: white;
+    color: gray;
     border: none;
     padding: 15px;
     border-radius: 10px;
@@ -49,7 +49,7 @@ input[type=text] {
 }
 
 input::placeholder {
-    color: rgb(139, 139, 139);
+    color: gray;
 }
 
 #adicionar {
@@ -89,7 +89,6 @@ input::placeholder {
     flex-grow: 1;
     font-size: 0.9rem;
 }
-
 
 .icone{
     background-color: #2A2A2A;
